RM-8669 Fix missing border-collapse inside BocAutoCompleteReferenceValue popup when widget is displayed in HTML table with default border collapse

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocAutoCompleteReferenceValue.UI.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaGray/Html/BocAutoCompleteReferenceValue.UI.css
@@ -29,6 +29,7 @@
   margin: 0;
   width: 100%;
   display: table;
+  border-collapse: collapse;
 }
 
 .ac_results li
